--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ body {
     text-align: center;
   }
   
-  .connect-links {
+  //*.connect-links {
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -57,7 +57,8 @@ body {
     text-decoration: none;
     font-size: 18px;
   }
-  
+
   .connect-links a i {
     margin-right: 8px;
   }
+  *//
