--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,26 @@ body {
     background-color: #099981;
   }
 
+  .experience-block {
+    padding: 20px;
+    background-color: #099981;
+    color: white;
+    font-family: Arial, sans-serif;
+    border-radius: 8px;
+    margin: 20px;
+  }
+  
+  .experience-block h2 {
+    margin-bottom: 15px;
+    font-size: 24px;
+  }
+  
+  .experience-list {
+    padding-left: 20px;
+    line-height: 1.6;
+    list-style-type: disc;
+  }
+
   #Connect {
     padding: 20px;
     background-color: #4e6b66;
