--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ body {
   .experience-block {
     padding: 20px;
     background-color: #099981;
-    color: white;
+    color: rgb(247, 240, 240);
     font-family: Arial, sans-serif;
     border-radius: 8px;
     margin: 20px;
