--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ body {
 
   .experience-block {
     padding: 20px;
-    background-color: #099981;
+    background-color: #89b3ac;
     color: rgb(247, 240, 240);
     font-family: Arial, sans-serif;
     border-radius: 8px;
