--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
   
 
   h1 {
-    background-color: #f14822;
+    background-color: #b1ec79;
     font-size: 40px;
     font-weight: bold;
     color: #22384e;
@@ -45,15 +45,21 @@ body {
     background-color: #89b3ac;
     color: rgb(247, 240, 240);
     font-family: Arial, sans-serif;
-    border-radius: 8px;
     margin: 20px;
   }
   
-  .experience-block h2 {
-    margin-bottom: 15px;
-    font-size: 24px;
+  .experience-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
   }
-  
+
+  .job-title {
+    font-size: 24px;
+    margin: 0;
+  }
+
   .experience-list {
     padding-left: 20px;
     line-height: 1.6;
